--- a/galaxy.yml
+++ b/galaxy.yml
@@ -44,7 +44,7 @@ tags: []
 dependencies: {}
 
 # The URL of the originating SCM repository
-repository: http://example.com/repository
+repository: test.com
 
 # The URL to any online docs
 documentation: http://docs.example.com
